[project]
name = "hackermcp"
version = "0.1.0"
description = "hackermcp is one of the great mcp server for hacking as it provides currently nmap and metasploit and will increse the tools list in the future"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]
